--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,19 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-war-plugin</artifactId>
-  <version>3.4.1-SNAPSHOT</version>
-  <type>maven-plugin</type>
-</dependency>
+   
   </dependencies>
   <build>
     <finalName>samimapp</finalName>
+     <plugins>
+           <plugin>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>2.4</version>
+    <configuration>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </configuration>
+    </plugin>
+        </plugins>
+
   </build>
 </project>
