--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-   
+   <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-clean-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-clean-plugin</artifactId>
+    <version>3.2.0</version>
+</dependency>
+
   </dependencies>
   <build>
     <finalName>samimapp</finalName>
