--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
     <artifactId>maven-clean-plugin</artifactId>
     <version>3.2.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.10</version>
+</dependency>
 
   </dependencies>
   <build>
